<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/root_layout"
    tools:context="com.example.gihan.uper.fragment.firstFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"


        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/first_fragment_title_uper"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="PARTNER"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_first_fragment_rider_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/looking_for_rider_app"
        android:textAlignment="center"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/bottomText"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_first_fragment_rider_app"
        android:layout_margin="16dp"
        android:weightSum="2"
        android:orientation="horizontal"

        >
        <Button
            android:id="@+id/btn_first_fragment_sign"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:layout_marginRight="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_sing_in_background"
            tools:ignore="Suspicious0dp" />

        <Button
            android:id="@+id/btn_first_fragment_regester"
            android:text="@string/regester"
            android:textColor="@color/btnregester"

            android:layout_marginLeft="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_regester_in_background"
            tools:ignore="Suspicious0dp" />


    </LinearLayout>
</RelativeLayout>
